feat: wip, migration to opendjk11 and corresponding graal compiler